# quick-send-file

./: Cargo.toml  LICENSE  README.md
crates/client-a/: Cargo.toml
crates/client-a/examples/: single_socket.rs  single_socket_transfer.rs  single_socket_transfer_file.rs
crates/client-a/src/: main.rs
crates/client-b/: Cargo.toml
crates/file-p2p/: Cargo.toml
crates/file-p2p/examples/: ping.rs
crates/file-p2p/src/: cli.rs  lib.rs  main.rs  transfer.rs
crates/file-transfer/: Cargo.toml
crates/file-transfer/src/: file_transfer.rs
crates/quic-transport/: Cargo.toml
crates/quic-transport/examples/: cert.rs  single_socket_new.rs
crates/quic-transport/src/: lib.rs  quic_endpoint.rs
crates/transfer/: Cargo.toml
crates/transfer/examples/: iroh_transfer_demo.rs  ping.rs
crates/transfer/src/: cli.rs  main.rs  transfer.rs
