[package]
name = "file-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = ["noise", "ping", "tcp", "tokio", "yamux"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iroh = "0.35.0"
iroh-blobs = { version = "0.35.0", features = ["rpc"] }
clap = { version = "4.5.38", features = ["derive"] }

